# cheri-samples

./: CMakeLists.txt
scripts/: exec-morello.sh  exec-riscv.sh
src/: .derived.c.swp  Makefile.inc  derived.c  derived_wrong.c  simple  simple.c  simple_wrong  simple_wrong.c
